--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
