--- a/example/package.json
+++ b/example/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-router-dom": "^7.0.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
