--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
