--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
+    "@visx/text": "^3.12.0",
+    "@visx/wordcloud": "^3.12.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
