--- a/example/tsconfig.app.json
+++ b/example/tsconfig.app.json
@@ -21,7 +21,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@dashboard/*": ["./src/features/dashboard/*"],
     }
   },
   "include": ["src"],
