--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-router-dom": "^7.0.2",
     "vite-tsconfig-paths": "^5.1.4"
