--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
+    "@tanstack/react-query-devtools": "^5.62.7",
     "@visx/scale": "^3.12.0",
     "@visx/text": "^3.12.0",
     "@visx/wordcloud": "^3.12.0",
