--- a/example/package.json
+++ b/example/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/material": "^6.1.10",
-    "@tanstack/react-query": "^5.62.3",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/lab": "6.0.0-beta.19",
+    "@mui/material": "^6.2.0",
+    "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.62.7",
     "@visx/scale": "^3.12.0",
     "@visx/text": "^3.12.0",
@@ -29,16 +30,16 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18.3.2",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.7.2",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.17.0",
+    "typescript-eslint": "^8.18.0",
     "vite": "^5.4.11"
   }
 }
