--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
