--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "docker": "vite --mode docker",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
