--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/lab": "6.0.0-beta.19",
     "@mui/material": "^6.3.0",
+    "@mui/x-data-grid": "^7.23.3",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-query-devtools": "^5.62.10",
     "@visx/scale": "^3.12.0",
