--- a/example/package.json
+++ b/example/package.json
@@ -20,11 +20,15 @@
     "@mui/x-data-grid": "^7.23.3",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-query-devtools": "^5.62.10",
+    "@types/lodash": "^4.17.13",
+    "@types/lodash.debounce": "^4.0.9",
     "@visx/scale": "^3.12.0",
     "@visx/text": "^3.12.0",
     "@visx/wordcloud": "^3.12.0",
     "axios": "^1.7.9",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
+    "react-color-palette": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
