--- a/example/package.json
+++ b/example/package.json
@@ -26,6 +26,7 @@
     "@visx/text": "^3.12.0",
     "@visx/wordcloud": "^3.12.0",
     "axios": "^1.7.9",
+    "framer-motion": "^11.15.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-color-palette": "^7.3.0",
