--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "docker": "vite --mode docker",
-    "dev": "vite",
+    "docker": "vite",
+    "dev": "vite --mode local",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
