Update production environment API URL and configure Docker network in stack

--- a/example/docker-stack.yml
+++ b/example/docker-stack.yml
@@ -1,8 +1,15 @@
 services:
   ocr-react:
     image: justinfay501/ocr-react:latest # Image name
+    networks:
+      - ocr_net
     ports:
       - "3000:3000"
     deploy: # Rolling release (Blue Green Deployment)
       update_config:
         order: start-first
+
+# Network is defined in the backend stack
+networks:
+  ocr_net:
+    external: true
