The browser is coming from the client meaning the api link needs to be the servers ip not the internal docker ip

--- a/example/compose.yml
+++ b/example/compose.yml
@@ -6,3 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+      
+# Network is defined in the backend stack
+networks:
+  ocr_net:
+    external: true
