--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,29 +1,55 @@
-name: Docker Image CI
+name: pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   packages: write
 
 jobs:
-
   build-and-push-image:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Latest
-    - uses: actions/checkout@v4
-    
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        push: true
-        tags: |
-          justinfay501/ocr-react:latest
-          justinfay501/ocr-react:${{ github.sha }}
+      - name: Checkout Latest
+        uses: actions/checkout@v4
+
+      - name: Loin to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: example/
+          push: true
+          tags: |
+            justinfay501/ocr-react:latest
+            justinfay501/ocr-react:${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-push-image
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: create env file
+        run: |
+          echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
+
+      - name: Docker Stack Deploy
+        uses: cssnr/stack-deploy-action@v1
+        with:
+          name: ocr-react
+          file: example/docker-stack.yaml
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: deploy-ocr-react
+          ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
+          env_file: ./envfile
