--- a/example/docker-stack.yml
+++ b/example/docker-stack.yml
@@ -1,11 +1,18 @@
 services:
   web:
     image: justinfay501/ocr-react:${GIT_COMMIT_HASH-latest} # Image name
+    networks:
+      - ocr-net
+
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.ocr-react.rule=Host(`eremos.cloud`)"
-      - "traefik.http.routers.ocr-react.entrypoints=websecure"
-      - "traefik.http.routers.ocr-react.tls.certresolver=myresolver"
+      - "traefik.http.routers.web.rule=Host(`eremos.cloud`)"
+      - traefik.http.routers.web.tls=true
+      - "traefik.http.routers.web.tls.certresolver=ocrresolver"
     deploy: # Rolling release (Blue Green Deployment)
       update_config:
         order: start-first
+
+networks:
+  ocr-net:
+    external: true
