--- a/example/docker-stack.yml
+++ b/example/docker-stack.yml
@@ -5,10 +5,10 @@ services:
       - ocr-net
 
     labels:
-      - "traefik.enable=true"
+      # - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`eremos.cloud`)"
-      - traefik.http.routers.web.tls=true
-      - "traefik.http.routers.web.tls.certresolver=ocrresolver"
+      # - traefik.http.routers.web.tls=true
+      # - "traefik.http.routers.web.tls.certresolver=ocrresolver"
     deploy: # Rolling release (Blue Green Deployment)
       update_config:
         order: start-first
