--- a/example/docker-stack.yml
+++ b/example/docker-stack.yml
@@ -5,10 +5,11 @@ services:
       - ocr-net
 
     labels:
-      # - "traefik.enable=true"
+      - "traefik.enable=true"
+      - "traefik.http.services.web.loadbalancer.server.port=3000"
       - "traefik.http.routers.web.rule=Host(`eremos.cloud`)"
-      # - traefik.http.routers.web.tls=true
-      # - "traefik.http.routers.web.tls.certresolver=ocrresolver"
+      - "traefik.http.routers.web.entrypoints=websecure"
+      - "traefik.http.routers.web.tls.certresolver=myresolver"
     deploy: # Rolling release (Blue Green Deployment)
       update_config:
         order: start-first
