--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,6 @@ name: pipeline
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
 
 permissions:
   packages: write
@@ -33,24 +31,24 @@ jobs:
             justinfay501/ocr-react:${{ github.sha }}
 
   # Can't SSH into local network for deployment
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - build-and-push-image
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-push-image
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: create env file
-  #       run: |
-  #         echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
+      - name: create env file
+        run: |
+          echo "GIT_COMMIT_HASH=${{ github.sha }}" >> ./envfile
 
-  #     - name: Docker Stack Deploy
-  #       uses: cssnr/stack-deploy-action@v1
-  #       with:
-  #         name: ocr-react
-  #         file: example/docker-stack.yaml
-  #         host: ${{ secrets.DEPLOY_HOST }}
-  #         user: deploy-ocr-react
-  #         ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
-  #         env_file: ./envfile
+      - name: Docker Stack Deploy
+        uses: cssnr/stack-deploy-action@v1
+        with:
+          name: ocr-react
+          file: example/docker-stack.yaml
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: deploy-ocr-react
+          ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
+          env_file: ./envfile
