--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,9 @@ name: pipeline
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "README.md"
+      - "docs/**"
 
 permissions:
   packages: write
