Add Auth0 authentication configuration and integrate zustand for token management

--- a/example/.env
+++ b/example/.env
@@ -1,1 +1,5 @@
 VITE_API_URL = "https://localhost:7164/api"
+VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
+VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
+VITE_AUTH0_AUDIENCE = "https://eremos.cloud.auth/ocr/api"
+VITE_AUTH0_REDIRECT_URI = "http://localhost:3000/notes"
