--- a/example/.env.production
+++ b/example/.env.production
@@ -1,1 +1,5 @@
 VITE_API_URL=https://eremos.cloud/api
+VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
+VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
+VITE_AUTH0_AUDIENCE = "https://eremos.us.auth0.com/api/v2/"
+VITE_AUTH0_REDIRECT_URI = "https://eremos.cloud/notes"
