--- a/example/package.json
+++ b/example/package.json
@@ -36,7 +36,8 @@
     "react-error-boundary": "^4.1.2",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
