--- a/example/.env.docker
+++ b/example/.env.docker
@@ -1,7 +1,7 @@
-VITE_API_URL = "https://localhost:7164/api"
+VITE_API_URL = "http://localhost:8080/api"
 VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
 VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
 VITE_AUTH0_AUDIENCE = "https://eremos.cloud.auth/ocr/api"
 VITE_AUTH0_REDIRECT_URI = "http://localhost:3000/notes"
-VITE_OCR_API_SCOPE = "read:notes create:notes"
+VITE_OCR_API_SCOPES = "read:notes create:notes"
 VITE_AUTH0_SCOPE = "read:current_user update:current_user_metadata profile"
