--- a/example/.env.production
+++ b/example/.env.production
@@ -3,3 +3,5 @@ VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
 VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
 VITE_AUTH0_AUDIENCE = "https://eremos.us.auth0.com/api/v2/"
 VITE_AUTH0_REDIRECT_URI = "https://eremos.cloud/notes"
+VITE_OCR_API_SCOPES = "read:notes create:notes"
+VITE_AUTH0_SCOPE = "read:current_user update:current_user_metadata profile"
