--- a/example/.env.docker
+++ b/example/.env.docker
@@ -2,6 +2,6 @@ VITE_API_URL = "http://localhost:8080/api"
 VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
 VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
 VITE_AUTH0_AUDIENCE = "https://eremos.cloud.auth/ocr/api"
-VITE_AUTH0_REDIRECT_URI = "http://localhost:3000/notes"
+VITE_AUTH0_REDIRECT_URI = "http://localhost:3000/dashboard"
 VITE_OCR_API_SCOPES = "read:notes create:notes"
 VITE_AUTH0_SCOPE = "read:current_user update:current_user_metadata profile"
