Update production environment variables for Auth0 audience and API URL

--- a/example/.env.production
+++ b/example/.env.production
@@ -1,7 +1,7 @@
-VITE_API_URL=https://eremos.cloud/api
+VITE_API_URL = https://eremos.cloud/api
 VITE_AUTH0_DOMAIN = "eremos.us.auth0.com"
 VITE_AUTH0_CLIENT_ID = "rgNXXmPb1OdydNyOXGRxSbenroCXpt1R"
-VITE_AUTH0_AUDIENCE = "https://eremos.us.auth0.com/api/v2/"
+VITE_AUTH0_AUDIENCE = "https://eremos.cloud.auth/ocr/api"
 VITE_AUTH0_REDIRECT_URI = "https://eremos.cloud/dashboard"
 VITE_OCR_API_SCOPES = "read:notes create:notes"
 VITE_AUTH0_SCOPE = "read:current_user update:current_user_metadata profile"
